// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`library fixture build with shikaka 1`] = `
"Used script: node cli.js src/index.js --out-dir test/fixtures/library/dist --root-dir test/fixtures/library --replace.VERSION 1.0.0

Directory tree:

library
  dist
    Button.js
    Footer.js
    Modal.js
    index.js
    styles.css
  package.json
  src
    components
      Button
        index.js
        index.module.css
      Footer
        index.js
        index.module.less
      Modal
        index.js
        index.module.scss
    index.js
"
`;

exports[`library fixture build with shikaka 2`] = `6`;

exports[`library-no-css-modules fixture build with shikaka 1`] = `
"Used script: node cli.js src/index.js --out-dir test/fixtures/library-no-css-modules/dist --root-dir test/fixtures/library-no-css-modules --no-css-modules

Directory tree:

library-no-css-modules
  dist
    Button.js
    index.js
    styles.css
  package.json
  src
    components
      Button
        index.css
        index.js
    index.js
"
`;

exports[`library-no-css-modules fixture build with shikaka 2`] = `3`;

exports[`library-no-css-modules fixture build with shikaka 3`] = `
"import React from 'react';

// eslint-disable-next-line no-unused-vars
function Button(props) {
  return /*#__PURE__*/React.createElement(\\"button\\", {
    className: \\"button\\"
  }, props.children);
}

export default Button;
"
`;

exports[`library-ts fixture build with shikaka 1`] = `
"Used script: node cli.js src/index.ts --out-dir test/fixtures/library-ts/dist --root-dir test/fixtures/library-ts --ts-config tsconfig.json

Directory tree:

library-ts
  dist
    Button.js
    index.js
    styles.css
  package.json
  src
    components
      Button
        index.module.css
        index.tsx
    index.ts
  tsconfig.json
  typings.d.ts
"
`;

exports[`library-ts fixture build with shikaka 2`] = `3`;

exports[`library-ts fixture build with shikaka 3`] = `
"import React from 'react';

var styles = {\\"button\\":\\"Button__button\\"};

// eslint-disable-next-line no-unused-vars
function Button(props) {
  return React.createElement(\\"button\\", {
    className: styles.button
  }, props.children);
}

export default Button;
"
`;

exports[`library-ts-simple fixture build with shikaka 1`] = `
"Used script: node cli.js src/index.ts --out-dir test/fixtures/library-ts-simple/dist --root-dir test/fixtures/library-ts-simple --ts-config tsconfig.release.json

Directory tree:

library-ts-simple
  dist
    index.js
  package.json
  src
    index.ts
  tsconfig.release.json
"
`;

exports[`library-ts-simple fixture build with shikaka 2`] = `1`;

exports[`library-ts-simple fixture build with shikaka 3`] = `
"// test comment
function greeter(person) {
  return 'Hello, ' + person.firstName + ' ' + person.lastName;
}

let user = {
  firstName: 'Jane',
  lastName: 'User'
};
let s = greeter(user);

export { s };
"
`;
